# coloredmatrix

./: LICENSE  README.md  pyproject.toml
coloredconsole/: stylize.py
coloredmatrix/: __init__.py
